# mc-resourcepacks-util

./: .gitignore  .pylintrc  CHANGELOG.md  README.md  cspell.json  init.py  pyproject.toml  workspace.code-workspace
src/: __init__.py
src/cli/: __init__.py
src/gui/: __init__.py
src/mc_resourcepacks_util_query/: __init__.py
src/mc_resourcepacks_util_shared/: __init__.py  main.py
src/mc_resourcepacks_util_tools/: __init__.py
src/query_resourcepacks/: ____main__.py  __main__.py
src/resourcepack_tools/: __init__.py
src/shared/: main.py
