#:schema https://gist.github.com/thakyZ/794efc5003ad437d387f6e75fefcbacc/pyproject.json
[tool.poetry]
name = "mc-resourcepacks-util"
version = "1.0.0"
description = "A utility for minecraft to better customize resource packs than the in-game minecraft ui."
authors = ["thakyZ <950594+thakyZ@users.noreply.github.com>"]
# Uncomment when no longer maintained by author(s).
# maintainers = []
license = "MIT"
readme = "README.md"
keywords = ["cli", "gui", "minecraft", "resourcepack", "utility"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Utilities",
  "Topic :: Games/Entertainment",
]
include = ["LICENSE","README.md"]
repository = "https://github.com/thakyZ/mc-resourcepacks-util"
homepage = "https://github.com/thakyZ/mc-resourcepacks-util#README"
documentation = "https://github.com/thakyZ/mc-resourcepacks-util/blob/main/docs/index.md"
packages = [
  # Shared packager definitions.
  { include = "mc_resourcepacks_util_shared", from = "src"                            },
  # CLI packager definitions.
  { include = "mc_resourcepacks_util_query", from = "src", to = "query_resourcepacks" },
  { include = "mc_resourcepacks_util_query", from = "src"                             },
  { include = "mc_resourcepacks_util_tools", from = "src", to = "resourcepack_tools"  },
  { include = "mc_resourcepacks_util_tools", from = "src"                             },
  # GUI packager definitions.
  { include = "mc_resourcepacks_util_gui",   from = "src"                             },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/thakyZ/mc-resourcepacks-util/issues"
Changelog = "https://github.com/thakyZ/mc-resourcepacks-util/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.12"
chardet = "^5.2.0"
rich = "^13.7.1"

[tool.poetry.group.gui.dependencies]
pyqt6 = "^6.6.1"

[tool.poetry.group.cli.dependencies]
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pylint = "^3.1.0"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[tool.poetry.scripts]
mc-resourcepacks-tools    = "mc_resourcepacks_util_tools.__init__:main"
resourcepack_tools        = "resourcepack_tools.mc_resourcepacks_util_tools.__init__:main"
mc-resourcepacks-query    = "mc_resourcepacks_util_query.__init__:main"
query_resourcepacks       = "query_resourcepacks.mc_resourcepacks_util_query.__init__:main"
mc-resourcepacks-util-gui = "mc_resourcepacks_util_gui.__init__:main"
resourcepack_tools_gui    = "mc_resourcepacks_util_gui.__init__:main"
query_resourcepacks_gui   = "mc_resourcepacks_util_gui.__init__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = [
  ".vscode/tasks",
  "src/mc_resourcepacks_util_shared",
  "src/query_resourcepacks",
  "src/resourcepack_tools",
  "src/mc_resourcepacks_util_gui"
]
exclude = [
    "**/__pycache__",
    "**/.mypy_cache"
]
ignore = [".env/**"]

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.12"

executionEnvironments = [
  { root = "src/mc_resourcepacks_util_gui",   pythonVersion = "3.12", extraPaths = [ "src/mc_resourcepacks_util_shared" ] },
  { root = "src/mc_resourcepacks_util_tools", pythonVersion = "3.12", extraPaths = [ "src/mc_resourcepacks_util_shared" ] },
  { root = "src/mc_resourcepacks_util_query", pythonVersion = "3.12", extraPaths = [ "src/mc_resourcepacks_util_shared" ] },
  { root = ".vscode/tasks",                   pythonVersion = "3.12" },
  { root = "src" }
]

# [tool.pylint.miscellaneous]
# notes = ["FIXME", "XXX", "TODO"]
# notes-rgx = "(_summary_|_description_)"
